Scroll up function link added to the bottom

--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                 <li>
                     <a href="#">Privacy policy</a>
                 </li>
+                <li>
+                    <a class="scroll">To the top</a>
+                </li>
             </ul>
             <ul class="social">
                 <li>
