Creating all html pages, uploading privacy policy points 1 to 4, updating social icons

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <a href="./index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Galery</a>
+                    <a href="./galery.html">Galery</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="./about.html">About</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="./blog.html">Blog</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contact</a>
@@ -185,16 +185,13 @@
                     <a href="./contact.html">Contact me</a>
                 </li>
                 <li>
-                    <a href="#">FAQ</a>
+                    <a href="./faq.html">FAQ</a>
                 </li>
                 <li>
-                    <a href="#">Reviews</a>
+                    <a href="./reviews.html">Reviews</a>
                 </li>
                 <li>
-                    <a href="#">Privacy policy</a>
-                </li>
-                <li>
-                    <a class="scroll">To the top</a>
+                    <a href="./privacy.html">Privacy policy</a>
                 </li>
             </ul>
             <ul class="social">
