--- a/reviews.html
+++ b/reviews.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/icons/SW_fav.png" type="image/x-icon" />
-    <title>Contact | Sparkling Willow Photography</title>
+    <title>Reviews | Sparkling Willow Photography</title>
     <link rel="stylesheet" type="text/css" href="./css/basic.css" />
     <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css" />
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css" />
     <link rel="stylesheet" type="text/css" href="./css/home.css" />
-    <link rel="stylesheet" type="text/css" href="./css/contact.css" />
 </head>
 
 <body>
@@ -46,57 +45,6 @@
         </nav>
     </header>
     <main>
-
-        <div class="email-container">
-            <div class="title-container">
-                <h1>Send me a message</h1>
-                <p>
-                    Please contact me for any questions you have about pricing, availability, to book your session or
-                    anything else. I will get back to you shortly.
-                </p>
-            </div>
-            <form action="https://formspree.io/f/xqknbrko" method="POST">
-                <span class="required required-name">
-                    Name is required
-                </span>
-                <label for="name">
-                    <span>
-                        Name *
-                    </span>
-                </label>
-                <input class="input" type="text" placeholder="" id="name" name="name" required>
-
-                <span class="required required-email">
-                    Email address is required
-                </span>
-                <span class="isValidEmail">
-                    This email doesn't seem to be valid. It should follow the format 'user@domain.com'
-                </span>
-                <label for="email">
-                    <span>
-                        Email address *
-                    </span>
-                </label>
-                <input class="input" type="email" placeholder="" id="email" name="email" required>
-
-                <label for="tel">
-                    Telephone
-                </label>
-                <input class="input" type="tel" placeholder="" id="tel" name="tel">
-
-                <span class="required required-message">
-                    Please type a message
-                </span>
-                <label for="message">
-                    <span>
-                        How can I help? *
-                    </span>
-                </label>
-                <textarea class="message" placeholder="" id="message" name="message" required></textarea>
-
-                <button class="btn_submit" type="submit" name="submit">Get in touch</button>
-            </form>
-        </div>
 
     </main>
     <footer>
@@ -135,7 +83,6 @@
         </div>
     </footer>
     <script src="./js/hamburger.js"></script>
-    <script src="./js/formValidation.js"></script>
 </body>
 
 </html>
