Uploading privacy policy points 5-7

--- a/privacy.html
+++ b/privacy.html
@@ -45,6 +45,7 @@
         </nav>
     </header>
     <main>
+        <h1 class="privacy-title">Privacy Policy</h1>
         <div class="privacy-container">
             <ol>
                 <li>
@@ -115,6 +116,111 @@
                             any other personal data that you choose to give me.
                         </li>
                     </ul>
+                </li>
+                <li>
+                    <h3>
+                        HOW I USE THE PERSONAL DATA I HOLD ABOUT YOU
+                    </h3>
+                    <h4>
+                        I may use your personal data in the course of my business, for example, in order to:
+                    </h4>
+                    <ul class="sub-ul-list">
+                        <li>
+                            respond to your enquiry and provide you with information about my services;
+                        </li>
+                        <li>
+                            provide you with any requested services;
+                        </li>
+                        <li>
+                            contact you about a previous order;
+                        </li>
+                        <li>
+                            send you a gift card, fine art prints or photographic albums;
+                        </li>
+                        <li>
+                            seek your feedback on my services;
+                        </li>
+                        <li>
+                            comply with my accounting and legal obligations;
+                        </li>
+                        <li>
+                            ensure the efficacy of my services;
+                        </li>
+                        <li>
+                            improve my services;
+                        </li>
+                        <li>
+                            market my business to other potential clients (for example, by including photos in my online
+                            portfolios).
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>
+                        DATA RETENTION
+                    </h3>
+                    <p>
+                        I may retain your personal data in order to operate my business, for example, in order to keep a
+                        record about your enquiry or the services provided to you and comply with my legal and
+                        accounting obligations. The length of time I retain it is determined by a number of factors
+                        including the
+                        purpose for which I use that information and my obligations under other laws
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        DATA SHARING
+                    </h3>
+                    <h4>
+                        I will never give your data to third parties for that third party to use, unless required to
+                        provide you with the services you have requested and in the ordinary course of my business. For
+                        example, I use third party services to:
+                    </h4>
+                    <ul class="sub-ul-list">
+                        <li>
+                            edit and retouch photos;
+                        </li>
+                        <li>
+                            provide you with a way in which to view your digital images via a private password-protected
+                            online gallery;
+                        </li>
+                        <li>
+                            send you your digital images once purchased;
+                        </li>
+                        <li>
+                            print your fine art prints and albums;
+                        </li>
+                        <li>
+                            design your photographic albums;
+                        </li>
+                        <li>
+                            store your photographs and communications with me;
+                        </li>
+                        <li>
+                            provide me with an online calendar of my client bookings and appointments;
+                        </li>
+                        <li>
+                            back up your photographs securely;
+                        </li>
+                        <li>
+                            host my website;
+                        </li>
+                        <li>
+                            comply with my tax, accounting and legal obligations (for example, by providing data to my
+                            accountant).
+                        </li>
+                    </ul>
+                    <p>
+                        I will always make sure that the third party providers are reputable and secure, that your data
+                        is only used for specified purposes, and that your data is kept safe. I will never sell your
+                        data to third parties.
+                    </p>
+                    <p>
+                        Some of the third party providers used for the above purposes are based outside the European
+                        Economic Area. Where information is transferred outside of the EEA, I will use my best
+                        endeavours to ensure that appropriate safeguards are in place to protect your information to the
+                        same or an equivalent level as would be found in UK and EU data protection legislation.
+                    </p>
                 </li>
             </ol>
         </div>
