--- a/privacy.html
+++ b/privacy.html
@@ -74,9 +74,9 @@
                     <h3>
                         HOW I MAY COLLECT YOUR PERSONAL DATA
                     </h3>
-                    <h4>
+                    <p>
                         I obtain personal data about you, for example, when:
-                    </h4>
+                    </p>
                     <ul class="sub-ul-list">
                         <li>
                             you fill in and submit the online contact form;
@@ -121,9 +121,9 @@
                     <h3>
                         HOW I USE THE PERSONAL DATA I HOLD ABOUT YOU
                     </h3>
-                    <h4>
+                    <p>
                         I may use your personal data in the course of my business, for example, in order to:
-                    </h4>
+                    </p>
                     <ul class="sub-ul-list">
                         <li>
                             respond to your enquiry and provide you with information about my services;
@@ -171,11 +171,11 @@
                     <h3>
                         DATA SHARING
                     </h3>
-                    <h4>
+                    <p>
                         I will never give your data to third parties for that third party to use, unless required to
                         provide you with the services you have requested and in the ordinary course of my business. For
                         example, I use third party services to:
-                    </h4>
+                    </p>
                     <ul class="sub-ul-list">
                         <li>
                             edit and retouch photos;
@@ -220,6 +220,83 @@
                         Economic Area. Where information is transferred outside of the EEA, I will use my best
                         endeavours to ensure that appropriate safeguards are in place to protect your information to the
                         same or an equivalent level as would be found in UK and EU data protection legislation.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        DATA SECURITY
+                    </h3>
+                    <p>
+                        I maintain strict security measures in order to protect personal data, for example by using
+                        encryption and password protection measures.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        RIGHTS OF ACCESS, CORRECTION, ERASURE AND RESTRICTION
+                    </h3>
+                    <p>
+                        You have the right to access your personal data and may request that I rectify or erase personal
+                        data or restrict the processing of your personal data or object to the processing (unless I can
+                        demonstrate legitimate grounds for the process which overrides your interest and rights or due
+                        to legal claims). In order to exercise your rights, please contact me.
+                    </p>
+                    <p>
+                        You also have the right to make a complaint to the Information Commissioner's Office (ICO), the
+                        UK supervisory authority for data protection issues, at any time. The ICO's contact details are
+                        as follows:
+
+                    </p>
+                    <p>
+                        Information Commissioner's Office: Wycliffe House, Water Lane, Wilmslow, Cheshire, SK9 5AF
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        COOKIE POLICY
+                    </h3>
+                    <p>
+                        I use cookies (small data files saved to your computer) to help my site work better for you and
+                        to help me understand how you use it. Cookies are set for a number of reasons – for example, to
+                        help you make online bookings or to help me analyse my site so I can make improvements.
+                    </p>
+                    <p>
+                        When someone visits sparklingwillowphotography.co.uk I collect standard internet log information
+                        and user behaviour details to help determine the number of people visiting various parts of the
+                        site. This data does not personally identify any site users.
+                    </p>
+                    <p>
+                        Cookies are also set when you use any of the social media sharing buttons on my site (for
+                        example, to post on Facebook or Instagram). I have no control over the cookie policies of
+                        third-party social media sites.
+                    </p>
+                    <p>
+                        Your web browser allows you to control which cookies your computer will and won't accept - use
+                        the Help menu in your browser window to find out more.
+                    </p>
+                    <p>
+                        If you continue to use sparklingwillowphotography.co.uk, I will assume you're happy with the
+                        cookies that I set. If you do not agree to my use of cookies but you still want to visit my
+                        website, you can turn off the cookies in your browser settings.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        CHANGES TO THIS NOTICE
+                    </h3>
+                    <p>
+                        Any changes I may make to our privacy notice in the future will be provided to you by
+                        updating my website. This privacy notice was last updated on 14 March 2022.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        CONTACT ME
+                    </h3>
+                    <p>
+                        If you have any questions regarding this notice or if you would like to speak to me about the
+                        manner in which I process your personal data, please email me using the
+                        <a href="./contact.html">contact form</a> or telephone +447703676264.
                     </p>
                 </li>
             </ol>
